test/e2e/valid/bufinit.mylang
{
    define my_buffer of buffer<int32, 3> = [1, 2, 3];
}
