test/e2e/invalid/bufread_wrong_index_type.mylang
{
    define my_buffer of buffer<int32, 5> = [];
    define mut y of int32 = my_buffer[true];
}
